# song_automations

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
src/song_automations/: __init__.py  cli.py  config.py  logging.py
src/song_automations/clients/: __init__.py  discogs.py  http.py  soundcloud.py  spotify.py
src/song_automations/matching/: __init__.py  fuzzy.py
src/song_automations/reports/: __init__.py  missing.py
src/song_automations/state/: __init__.py  tracker.py
src/song_automations/sync/: __init__.py  engine.py
src/song_automations/web/: __init__.py  app.py
src/song_automations/web/templates/: index.html  logs.html
tests/: conftest.py
tests/test_clients/: test_discogs.py  test_soundcloud.py  test_spotify.py
tests/test_matching/: test_fuzzy.py
tests/test_state/: __init__.py  test_tracker.py
tests/test_sync/: test_engine.py
